--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'The name of your action here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'TEI validation'
+description: 'Validate XML documents against TEI schema'
+author: 'Carsten Milling <cmil@hashtable.de>'
 
 # Define your inputs here.
 inputs:
