--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -3,14 +3,18 @@
 printWidth: 80
 tabWidth: 2
 useTabs: false
-semi: false
+semi: true
 singleQuote: true
 quoteProps: as-needed
 jsxSingleQuote: false
-trailingComma: none
+trailingComma: es5
 bracketSpacing: true
 bracketSameLine: true
 arrowParens: always
 proseWrap: always
 htmlWhitespaceSensitivity: css
 endOfLine: lf
+overrides:
+  - files: ["**/*.yml", "**/*.yaml"]
+    options:
+      singleQuote: false
