--- a/action.yml
+++ b/action.yml
@@ -1,18 +1,18 @@
-name: 'TEI validation'
-description: 'Validate XML documents against TEI schema'
-author: 'Carsten Milling <cmil@hashtable.de>'
+name: "TEI validation"
+description: "Validate XML documents against TEI schema"
+author: "Carsten Milling <cmil@hashtable.de>"
 
 # Define your inputs here.
 inputs:
   milliseconds:
-    description: 'Your input description here'
+    description: "Your input description here"
     required: true
-    default: '1000'
+    default: "1000"
 
 # Define your outputs here.
 outputs:
   time:
-    description: 'Your output description here'
+    description: "Your output description here"
 
 runs:
   using: docker
