--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "@actions/github": "^6.0.1"
+    "@actions/exec": "^1.1.1",
+    "@actions/github": "^6.0.1",
+    "@actions/glob": "^0.5.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.0",
@@ -65,7 +67,7 @@
     "rollup": "^4.43.0",
     "ts-jest": "^29.4.0",
     "ts-jest-resolver": "^2.0.1",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.20.2",
     "typescript": "^5.8.3"
   },
   "optionalDependencies": {
