Prevent exeption in env where job summary is not enabled
and remove setOutput for now.

There is a the warning: "The `set-output` command is deprecated and will be
disabled soon. Please upgrade to using Environment Files." The setOutput
method should do that, but apparently it also still uses the old way well.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
             --rm ${{ env.TEST_TAG }}
 
   test-action:
-    name: GitHub Actions Test
+    name: GitHub Action Test
     runs-on: ubuntu-latest
 
     steps:
@@ -101,10 +101,6 @@ jobs:
         uses: ./
         with:
           warn-only: yes
-
-      - name: Print Output
-        id: output
-        run: echo "Number of errors ${{ steps.test-default.outputs.errors }}"
 
       - name: Test DraCor Schema
         id: test-dracor
