--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^6.0.1",
-    "@actions/glob": "^0.5.0"
+    "@actions/glob": "^0.5.0",
+    "xmldom": "^0.6.0",
+    "xpath": "^0.0.34"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.0",
@@ -52,6 +54,7 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
+    "@types/xmldom": "^0.1.34",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^9.29.0",
