Rename schema input 'all' to 'tei'

--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ inputs:
   schema:
     description: "Schema to validate against"
     required: false
-    default: "all"
+    default: "tei"
   version:
     description: "Schema version to validate against"
     required: false
