Make file input mandatory
This is our approach to support workflows where only modified files
are validated. An advanced example has been added to the README.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,12 +100,14 @@ jobs:
         id: test-default
         uses: ./
         with:
+          files: tei/*.xml
           warn-only: yes
 
       - name: Test DraCor Schema
         id: test-dracor
         uses: ./
         with:
+          files: tei/*.xml
           schema: dracor
           warn-only: yes
 
