Disable trivy for now
The Dockerfile advisories cannot easily be implemented in
an action container.

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -59,5 +59,6 @@ jobs:
           VALIDATE_JAVASCRIPT_STANDARD: false
           VALIDATE_JSCPD: false
           VALIDATE_JSON: false
+          VALIDATE_TRIVY: false
           VALIDATE_TYPESCRIPT_ES: false
           VALIDATE_TYPESCRIPT_STANDARD: false
