--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@actions/exec": "^1.1.1",
     "@actions/github": "^6.0.1",
     "@actions/glob": "^0.5.0",
-    "xmldom": "^0.6.0",
+    "@xmldom/xmldom": "^0.8.11",
     "xpath": "^0.0.34"
   },
   "devDependencies": {
@@ -54,7 +54,6 @@
     "@rollup/plugin-typescript": "^12.1.4",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
-    "@types/xmldom": "^0.1.34",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.37.0",
     "eslint": "^9.33.0",
